src/components/Gallery/styles.scss
@import ':sharedStyles';

.container {
  position: relative;
  width: 714px;
  height: 320px;
  margin: 0 auto;
  &:hover {
    cursor: -webkit-grab;
  }
}

.cover {
  position: absolute;
  z-index: 0;
  bottom: 0;
  left: 200px;
  padding-top: 30px;
}

.cover > .delButton {
  display: none;
  position: absolute;
  top: 0;
  left: 150px;
  width: 20px;
  height: 20px;
  background-image: url("../../assets/images/cross2.svg");
  background-size: 100%;
  border: none;
  background-color: transparent;
  &:hover {
    transform: scale(1.1);
    cursor: pointer;
  }
}

.cover:hover > .delButton {
  display: block;
}

